cmake_minimum_required(VERSION 3.20)

project(my_project
    VERSION 0.1.0
    DESCRIPTION "A learning project with modern CMake"
    LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(BUILD_DOXYGEN "Build Doxygen documentation" ON)
option(BUILD_TESTS "Build tests" ON)

if (BUILD_TESTS)
    enable_testing()
    include(FetchContent)
    FetchContent_Declare(
        googletest
        URL https://github.com/google/googletest/archive/refs/tags/v1.15.2.zip
    )
    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
    FetchContent_MakeAvailable(googletest)
endif()

add_subdirectory(lib/mylib)

add_subdirectory(src)
